# cosmicraysandearthquakes

./: .gitignore  CosmicRayNeutronQuakeAnalysis.ipynb  README.md  claude.md  pyproject.toml
config/: stations.yaml
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  refs.bib
results/: additional_robustness.json  benchmark_gpu.txt  catalog_completeness.txt  combined_analysis.json  combined_analysis_report.md  data_availability.json  data_availability.txt  detrended_report.md  detrended_results.json  geo_localisation.json  geo_localisation_report.md  homola_replication.json  magnitude_sensitivity.json  neff_comparison.json  out_of_sample_metrics.json  out_of_sample_report.md  prereg_predictions.md  raw_pairwise_correlations.json  raw_pairwise_table.tex  stress_test_report.md  stress_test_results.json
scripts/: 01_download_data.py  02_homola_replication.py  03_stress_test.py  04_detrended_analysis.py  05_geographic_localisation.py  06_check_data_availability.py  07_out_of_sample.py  08_combined_timeseries.py  09_raw_pairwise_correlations.py  10_robustness.py  11_additional_robustness.py  benchmark_gpu.py  catalog_completeness_check.py
src/crq/: __init__.py
src/crq/ingest/: __init__.py  nmdb.py  seismic.py  sidc.py  station_roster.py  usgs.py
src/crq/preprocess/: detrend.py
src/crq/stats/: surrogates.py  surrogates_gpu.py
tests/: conftest.py  test_detrend.py  test_nmdb.py  test_seismic.py  test_surrogates.py  test_surrogates_gpu.py  test_usgs.py
